--- a/index.html
+++ b/index.html
@@ -26,12 +26,41 @@
     <title>Frontend Mentor | Profile card component</title>
   </head>
   <body>
-    Victor Crest 26 London 80K Followers 803K Likes 1.4K Photos
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div>
+    <main class="card">
+      <img src="./images/image-victor.jpg" alt="Victor profile photo" />
+      <div class="head"></div>
+      <div class="personal-info">
+        <h1 class="name">Victor Crest</h1>
+        <h2 class="age">26</h2>
+        <h3>London</h3>
+      </div>
+      <hr>
+      <div class="statistics">
+        <div class="stat">
+          <h2>80K</h2>
+          <p>Followers</p>
+        </div>
+        <div class="stat">
+          <h2>803K</h2>
+          <p>Likes</p>
+        </div>
+        <div class="stat">
+          <h2>1.4K</h2>
+          <p>Photos</p>
+        </div>
+      </div>
+      <footer>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a
+          href="https://www.frontendmentor.io/profile/shElkhateeb"
+          target="_blank"
+          >Shorouk Elkhateeb</a
+        >.
+      </div>
+    </footer>
   </body>
 </html>
