--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="./images/favicon-32x32.png"
     />
 
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/normalize.css" />
 
     <link rel="stylesheet" href="css/style.css" />
 
@@ -34,7 +34,7 @@
         <h2 class="age">26</h2>
         <h3>London</h3>
       </div>
-      <hr>
+      <hr />
       <div class="statistics">
         <div class="stat">
           <h2>80K</h2>
@@ -49,7 +49,8 @@
           <p>Photos</p>
         </div>
       </div>
-      <footer>
+    </main>
+    <footer>
       <div class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
